--- a/portal-web/src/components/Navbar.css
+++ b/portal-web/src/components/Navbar.css
@@ -96,6 +96,18 @@ button:hover {
   transform: translateY(0);
 }
 
+.search-icon-container {
+  position:left 20px;
+  top: 10px; 
+  right: 10px;
+  cursor: pointer;
+  margin-right: 10px;
+}
+.search-icon-container i {
+  font-size: 20px;
+  display: flex;
+}
+
 /* Media Query for mobile responsiveness */
 @media screen and (max-width: 850px) {
   .NavbarItem {
